--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "mdb-react-ui-kit": "^1.4.0",
-    "mdbreact": "^5.1.0",
     "query-string": "^7.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react": "16.14.0",
+    "react-dom": "17.0.0",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "3.4.3",
     "socket.io-client": "^4.2.0",
     "web-vitals": "^1.1.2"
   },
