--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=simple-social-media
-sonar.projectName=simple-social-media
+sonar.projectKey=react-crud
+sonar.projectName=react-crud
 sonar.projectVersion=1.0
 sonar.sources=.
 sonar.sourceEncoding=UTF-8
