--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,25 @@
-sonar.projectKey=react-crud
-sonar.projectName=react-crud
+# must be unique in a given SonarQube instance
+sonar.projectKey=simple-social-media
+
+# this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
+sonar.projectName=simple-social-media
 sonar.projectVersion=1.0
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+# Since SonarQube 4.2, this property is optional if sonar.modules is set. 
+# If not set, SonarQube starts looking for source code from the directory containing 
+# the sonar-project.properties file.
 sonar.sources=.
+
+# Encoding of the source code
 sonar.sourceEncoding=UTF-8
-sonar.host.url=http://54.251.3.125:9007/
-sonar.login=sqa_788f794cd95b84dee797a280a19c9042fe9bdf63
-sonar.exclusions=**/node_modules/**,/coverage/lcov-report/*,test/*.js
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
+
+# Language settings
+sonar.language=js
+
+# Exclusions for files that don't need to be analyzed
+sonar.exclusions=**/*.json
+
+# Additional parameters (if needed)
+# sonar.someParameter=someValue
+
