--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,25 +1,18 @@
 # must be unique in a given SonarQube instance
 sonar.projectKey=simple-social-media
 
-# this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
+# this is the name and version displayed in the SonarQube UI
 sonar.projectName=simple-social-media
 sonar.projectVersion=1.0
 
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-# Since SonarQube 4.2, this property is optional if sonar.modules is set. 
-# If not set, SonarQube starts looking for source code from the directory containing 
-# the sonar-project.properties file.
-sonar.sources=.
+# Path is relative to the sonar-project.properties file.
+sonar.sources=src
 
 # Encoding of the source code
 sonar.sourceEncoding=UTF-8
 
-# Language settings
+# Language settings (JavaScript in this case)
 sonar.language=js
 
-# Exclusions for files that don't need to be analyzed
-sonar.exclusions=**/*.json
-
-# Additional parameters (if needed)
-# sonar.someParameter=someValue
-
+# Point to your test coverage report
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
